--- a/Mini_project/css/style.css
+++ b/Mini_project/css/style.css
@@ -1,6 +1,7 @@
 body{
     display: flex;
     justify-content: center;
+    background: #d2e1e8;
 }
 .mainDiv{
     display: flex;
@@ -73,13 +74,14 @@ body{
 }
 
 .user_card{
-    border: 2px solid black;
-    border-radius: 10px;
-    background: #e7e1e1;
+    /*border: 2px solid black;*/
+    /*border-radius: 10px;*/
+    /*background: #e7e1e1;*/
     display: flex;
     flex-direction: column;
     width: 30%;
     padding: 5px 5px 5px 5px;
+    row-gap: 5px;
 }
 
 .post{
@@ -110,4 +112,16 @@ body{
     padding: 5px 5px 5px 5px;
     text-align: center;
     background: #e7e1e1;
+}
+.some{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background: #e7e1e1;
+}
+
+.inform, .address, .geo, .company{
+    border: 2px black solid;
+    border-radius: 10px;
+    background: #e7e1e1;
+    padding-left: 5px;
 }
